# 6IMPOSE_Data

./: .gitignore  LICENSE  Readme.md  TODO  download_ycb_models.py  dropjects.yml  eval_log.py  process_shapenet.py  pyproject.toml  ram_logger.py  requirements.txt  setup.py  viewDataset.py  viewDataset2.py  visualize_ram.py
examples/: 01_simple_randomization.py  02_multi_instance.py  03_animation.py  04_physics.py  05_physics_multiview.py
legacy/: 01_simple_randomization.py  02_multi_instance.py  05_physics_multiview.py
meshes/cpsduck/: cpsduck.mtl
simpose/: __init__.py  __main__.py  base.py  base_config.py  callback.py  camera.py  common.py  dataset_viewer.py  exr.py  light.py  object.py  observers.py  placeable.py  plane.py  rand.py  randomizer.py  redirect_stdout.py  register_addon.py  remote_semaphore.py  render_product.py  scene.py  writer.py
simpose/analyze/: analyzer.py
simpose/data/: __init__.py  bop_datasets.py  dataset.py  linemod.py  simpose_dataset.py  tfrecord_dataset.py
simpose/downloaders/: __init__.py  downloader.py  omni3d_downloader.py  ycb_downloader.py
simpose/entities/: __init__.py  camera.py  light.py  object.py  placeable.py  plane.py
simpose/generators/: __init__.py  dropjects.py  dropped_objects.py  flying_objects.py  generator.py  simple_gen.py
simpose/materials/: __init__.py  common.py
simpose/random/: __init__.py  appearance_randomizer.py  background_randomizer.py  camera_frustum_randomizer.py  camera_placement_randomizer.py  camera_scene_randomizer.py  light_randomizer.py  model_loader.py  rand_in_camera_frustum.py  (+3 more)
(+5 files in other folders)
