[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpose"
version = "1.5.0"
description = "Synthetic Image Generator based on Blender"
authors = [
    { name = "Lukas Dirnberger", email = "lukas.dirnberger@tum.de" }
]
readme = "Readme.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "silence_tensorflow",
    "tqdm",
    "scipy",
    "click",
    "pybullet",
    "coloredlogs",
    "streamlit",
    "streamlit-image-comparison",
    "openexr",
    "pydantic",
    "pyyaml",
    "tensorflow",
    "openxlab",
    "opencv-python"
]

[project.urls]
Homepage = "https://github.com/LukasDb/6IMPOSE_Data"

[project.scripts]
simpose = "simpose.__main__:run"

